[project]
name = "sat-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.0",
    "networkx>=3.5",
    "peft>=0.18.0",
    "pyyaml>=6.0.3",
    "rdflib>=7.4.0",
    "sentence-transformers>=2.2",
    "torch>=2.1",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.40",
    "wrapt>=2.0.1",
]
